# B8

backend/: .gitignore  Dockerfile  README.md  compose.yml  debug.py  env.py.example  logic.py  model.py  pyproject.toml  server.py
backend/prompt/: extend_idea_prompt.txt  extend_idea_system_prompt.txt  extract_idea_prompt.txt  extract_idea_system_prompt.txt
frontend/: .env.local.example  .eslintignore  .eslintrc.js  .prettierignore  .prettierrc.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/canvas/: page.tsx
frontend/src/app/components/: TalkPanel.tsx
frontend/src/app/room/[roomId]/: CanvasPage.tsx  page.tsx
frontend/src/app/room/[roomId]/join/: page.tsx
frontend/src/app/room/new/: page.tsx
frontend/src/app/sidebartest/: page.tsx  style.scss
frontend/src/app/sockettest/: page.tsx
frontend/src/lib/: ClientService.ts  chat.ts  color.ts  genId.ts  speech.ts  tree.ts
frontend/type/: speechRecognition.d.ts
