[tool.poetry]
name = "b8"
version = "0.1.0"
description = ""
authors = ["gyuta <kuroshiba0408@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-socketio = "^5.3.6"
openai = "^0.28.1"
anytree = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
